Finished open source prep for code.

--- a/src/system.ini
+++ b/src/system.ini
@@ -6,11 +6,12 @@ classification_model_name = microsoft/BiomedNLP-KRISSBERT-PubMed-UMLS-EL
 classification_model_checkpoint = ep-5_lr-1e-05_bs-8_chk-0.5_cls-small_head_sched-True
 classification_model_size = small_head
 ner_model_name = microsoft/BiomedNLP-KRISSBERT-PubMed-UMLS-EL
+ner_checkpoint = ep-3_lr-5e-05_wd-0.01_bs-16_freq-100\checkpoint-4800
 
 [Nar-Shaddaa]
-ner_checkpoint = C:\medlangmodels\kriss_ner
-classification_model_path = C:\medlangmodels\classification\kriss\
+ner_model_path = C:\medlangmodels\ner\
+classification_model_path = C:\medlangmodels\classification\
 
 [Dantooine]
-ner_checkpoint = d:\medlangmodel\ner\kriss\ep-3_lr-5e-05_wd-0.01_bs-16_freq-100\checkpoint-4800
-classification_model_path = d:\medlangmodel\classification\kriss\final\
+ner_model_path = d:\medlangmodel\ner\
+classification_model_path = d:\medlangmodel\classification\
